Introduce API to delete wallet
