# docs/swagger.yaml
@@ -154,6 +154,36 @@ paths:
       tags:
       - wallet
   /api/v1/wallets/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete wallet
+      parameters:
+      - description: wallet id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/errs.Err'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/errs.Err'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/errs.Err'
+      summary: Delete wallet
+      tags:
+      - wallet
     put:
       consumes:
       - application/json
