# main.go
@@ -10,8 +10,8 @@ import (
 )
 
 // @title			Wallet API
-// @version		1.0
-// @description	Sophisticated Wallet API
+// @version			1.0
+// @description		Sophisticated Wallet API
 // @host			localhost:1323
 func main() {
 	p, err := postgres.New()
@@ -26,5 +26,6 @@ func main() {
 	e.GET("/api/v1/users/:id/wallets", handler.GetUserWallets)
 	e.POST("/api/v1/wallets", handler.CreateWallet)
 	e.PUT("/api/v1/wallets/:id", handler.UpdateWallet)
+	e.DELETE("/api/v1/wallets/:id", handler.DeleteWallet)
 	e.Logger.Fatal(e.Start(":1323"))
 }
